ndb - bug#20535   set null bits on delete+insert